--- a/midp1/build.xml
+++ b/midp1/build.xml
@@ -1,20 +1,6 @@
-<project name="Calc" default="make-release">
-  <property name="wtk.home" value="/home/roarl/ant/WTK104"/>
-
-  <taskdef name="wtkbuild" classname="de.pleumann.antenna.WtkBuild"/>
+<project name="Calc" default="make-jar">
   <taskdef name="wtkpackage" classname="de.pleumann.antenna.WtkPackage"/>
-  <taskdef name="wtkpreverify" classname="de.pleumann.antenna.WtkPreverify"/>
-  <taskdef name="wtkobfuscate" classname="de.pleumann.antenna.WtkObfuscate"/>
-
-  <target name="make-release">
-    <wtkbuild srcdir="."
-              destdir="."
-              compiler="gcj"
-              debug="off"
-              optimize="on"
-              deprecation="on"
-              preverify="false" />
-
+  <target name="make-jar">
     <wtkpackage jarfile="Calc.jar"
                 jadfile="Calc.jad"
                 obfuscate="true"
@@ -22,7 +8,5 @@
                 autoversion="false">
       <fileset dir="." includes="ral/*" />
     </wtkpackage> 
-
   </target>
-
 </project>
