--- a/midp2/build.xml
+++ b/midp2/build.xml
@@ -1,5 +1,5 @@
 <project name="CalcMIDP2" default="make-jar">
-  <taskdef name="wtkpackage" classname="de.pleumann.antenna.WtkPackage"/>
+  <taskdef resource="antenna.properties" classpath="${antennapath}"/>
   <target name="make-jar">
     <wtkpackage jarfile="CalcMIDP2.jar"
                 jadfile="CalcMIDP2.jad"
