Removed warnings from Eclipse

--- a/applet/.classpath
+++ b/applet/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="main"/>
-	<classpathentry kind="src" path="midp1"/>
+	<classpathentry excluding="CVS/|midpcalc/CVS/" kind="src" path="main"/>
+	<classpathentry excluding="CVS/|midpcalc/CVS/" kind="src" path="midp1"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="JSObject.jar"/>
 	<classpathentry kind="output" path="target"/>
