--- a/midp1/build.xml
+++ b/midp1/build.xml
@@ -10,7 +10,7 @@
                 preverify="true"
                 autoversion="false">
       <fileset dir="target" includes="**/*.class"/>
-      <fileset dir="../resources" includes="*"/>
+      <fileset dir=".." includes="resources/*"/>
     </wtkpackage> 
   </target>
 </project>
