--- a/applet/.classpath
+++ b/applet/.classpath
@@ -3,7 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry excluding="CVS/|midpcalc/CVS/" kind="src" path="main"/>
 	<classpathentry excluding="CVS/|midpcalc/CVS/" kind="src" path="midp1"/>
+	<classpathentry excluding="CVS/|midpcalc/CVS/" kind="src" output="target/test-classes" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="JSObject.jar"/>
-	<classpathentry kind="output" path="target"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
