--- a/applet/.settings/org.eclipse.jdt.ui.prefs
+++ b/applet/.settings/org.eclipse.jdt.ui.prefs
@@ -1,6 +1,5 @@
-#Thu Oct 26 22:08:16 CEST 2006
+#Sun Jan 20 20:59:31 CET 2008
 eclipse.preferences.version=1
 formatter_profile=_MidpCalc
 formatter_settings_version=10
-internal.default.compliance=user
 org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?><templates/>
